--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-icons": "^3.7.0",
     "react-scripts": "3.2.0",
+    "react-toggle": "^4.1.1",
     "styled-components": "^4.4.0",
     "styled-theming": "^2.2.0"
   },
